<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp" 
        android:layout_weight="1"  
        android:layout_gravity="center"
        android:background="#00000F"
        android:gravity="center"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/app_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" 
            android:gravity="center" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_statu_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" 
        android:gravity="center"
        android:orientation="horizontal" >
        
        <CheckBox
            android:id="@+id/checkbox_systemapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:layout_gravity="center"
            android:paddingLeft="5dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/show_system_app" />

        <Button
            android:id="@+id/install_apk"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/install_apk" />

        <Button
            android:id="@+id/uninstall_apk"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/uninstall_apk" />
    </LinearLayout>

</LinearLayout>