<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical" >

    <Button
        android:id="@+id/screen_on"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/screen_on" />

    <Button
        android:id="@+id/screen_off"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/screen_off" /> 

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="left"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/screen_io"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:digits="0123456789"
            android:gravity="center"
            android:includeFontPadding="false"
            android:inputType="number"
            android:maxLength="5"
            android:numeric="integer"
            android:padding="0dp"
            android:singleLine="true"
            android:text="176" />

        <Button
            android:id="@+id/screen_iotrigger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:singleLine="true"
            android:text="@string/screen_io" />
    </LinearLayout>

</LinearLayout>