<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical" >

    <Button
        android:id="@+id/power_reboot"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/power_reboot" />

    <Button
        android:id="@+id/power_schedule_poweroff"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/power_schedule_poweroff" />

    <!-- TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/power_schedule_prompt" /-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="left"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/power_schedule_interval"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:digits="0123456789"
            android:gravity="center"
            android:includeFontPadding="false"
            android:inputType="number"
            android:maxLength="8"
            android:numeric="integer"
            android:padding="0dp"
            android:singleLine="true"
            android:text="5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:padding="0dp"
            android:singleLine="true"
            android:text="@string/time_unit_minute" />
    </LinearLayout>

</LinearLayout>